src/objects/Choice_Case_2nd_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Group__c</fullName>
        <label>Access Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <description>Denotes whether user is VIP, Military or Both</description>
        <label>Customer Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Value__c</fullName>
        <label>Dependent Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Ids__c</fullName>
        <inlineHelpText>Profile Name that should NOT see the Picklist Choice</inlineHelpText>
        <label>Profile Ids</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Choice - Case 2nd Type</label>
</CustomObject>